name: ixl
version: 0.0.1
build-type: Simple
cabal-version: >= 1.2

library
  exposed-modules: Ixl
  build-depends: base, mtl, parsec, containers, unix, dlist

Executable ixl
  Main-is:           Main.hs
  build-depends: base, mtl, parsec, containers, unix, readline, dlist

Test-Suite test-syntax
  type: exitcode-stdio-1.0
  main-is: IxlTest/SyntaxTest.hs
  build-depends: hspec, HUnit,
                 base, mtl, parsec, containers, unix, dlist, Cabal >= 1.9.2
